--- a/FizzBuzz-WebApp/FizzBuzz-WebApp.csproj
+++ b/FizzBuzz-WebApp/FizzBuzz-WebApp.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>FizzBuzz_WebApp</RootNamespace>
+    <StartupObject>FizzBuzz_WebApp.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta2" />
+  </ItemGroup>
 
 </Project>
