Działająca wersja, potrzebne kosmetyczne zmiany

--- a/FizzBuzz-WebApp/appsettings.json
+++ b/FizzBuzz-WebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BazaDanychFB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BazaDanychFB;Integrated Security=True;"
+  },
 }
